# Gravity-Simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compileShaders.sh  compileShadersAuto.sh  imgui.ini
VulkanVs/: VulkanVs.sln  VulkanVs.vcxproj  VulkanVs.vcxproj.filters  imgui.ini
VulkanVs/VulkanVs/: VulkanVs.vcxproj  imgui.ini
VulkanVs/VulkanVs/shaders/: skybox.frag  stars.frag
VulkanVs/VulkanVs/src/: cameraController.cpp  cameraController.h  renderer.cpp  renderer.h
VulkanVs/shaders/: billboard.frag  orbits.frag  orbits.vert  skybox.vert  stars.vert
VulkanVs/shaders/spv/: orbits.frag.spv  orbits.vert.spv  sphere.frag.spv  stars.frag.spv
VulkanVs/src/: application.cpp  cameraController.cpp  defines.h  object.h  renderer.h
shaders/: billboard.frag  billboard.frag.spv  billboard.vert  billboard.vert.spv  lines.frag  lines.frag.spv  lines.vert  lines.vert.spv  orbits.vert  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  simple.frag  simple.frag.spv  simple.vert  skybox.frag  skybox.vert  skybox.vert.spv  sphere.frag  sphere.vert  stars.frag  stars.frag.spv  stars.vert  stars.vert.spv
shaders/spv/: billboard.frag.spv  billboard.vert.spv  orbits.vert.spv  shader.frag.spv  shader.vert.spv  simple.vert.spv  sphere.frag.spv  sphere.vert.spv
src/: Application.cpp  application.cpp  application.h  bak.  buffer.cpp  buffer.h  camera.cpp  camera.h  cameraController.cpp  cameraController.h  cubemap.cpp  defines.h  descriptors.cpp  descriptors.h  device.cpp  device.h  frameInfo.h  image.cpp  image.h  main.cpp  model.cpp  model.h  object.cpp  object.h  orbitModel.cpp  orbitModel.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  sampler.cpp  sampler.h  simpleModel.cpp  simpleModel.h  skybox.cpp  skybox.h  swapchain.cpp  swapchain.h  textureImage.cpp  textureImage.h  (+2 more)
src/models/: customModel.cpp  customModel.h  customModelPosOnly.cpp  customModelPosOnly.h  model.cpp  model.h  orbitModel.cpp  orbitModel.h  simpleModel.cpp  simpleModel.h  skybox.cpp  skybox.h  skyboxModel.cpp  skyboxModel.h  sphereModel.cpp  sphereModel.h
src/objects/: cameraObject.cpp  cameraObject.h  orbit.cpp  orbit.h  planet.cpp  planet.h  sphere.cpp  sphere.h  star.cpp  star.h  triangle.cpp  triangle.h
src/vulkan/: buffer.cpp  descriptors.cpp  device.cpp  device.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  pipeline.cpp  pipeline.h  renderPass.cpp  renderPass.h  sampler.h  skybox.cpp  skybox.h  swapchain.cpp  swapchain.h  textureImage.cpp  textureImage.h  utils.h
(+32 files in other folders)
